test/files/neg/macro-invalidshape-b.check
Macros_Test_2.scala:2: error: macro body has wrong shape:
 required: macro [<implementation object>].<method name>[[<type args>]]
  def foo(x: Any) = macro Impls.foo(null)(null)
      ^
one error found
